@@ -3,7 +3,6 @@ package com.nhnacademy.bookstorecoupon.couponpolicy.repository.impl;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -24,8 +23,12 @@ public class CustomCouponPolicyRepositoryImpl implements CustomCouponPolicyRepos
 		this.queryFactory = queryFactory;
 	}
 
+	/**
+	 *{@inheritDoc}
+	 */
 	@Override
-	public Page<CouponPolicyResponseDTO> findAllWithBooksAndCategories(Pageable pageable, Map<Long, BookCoupon.BookInfo> bookIdMap,
+	public Page<CouponPolicyResponseDTO> findAllWithBooksAndCategories(Pageable pageable,
+		Map<Long, BookCoupon.BookInfo> bookIdMap,
 		Map<Long, CategoryCoupon.CategoryInfo> categoryIdMap) {
 		QCouponPolicy couponPolicy = QCouponPolicy.couponPolicy;
 
@@ -47,10 +50,12 @@ public class CustomCouponPolicyRepositoryImpl implements CustomCouponPolicyRepos
 				.isUsed(policy.getIsUsed())
 				.bookId(bookIdMap.get(policy.getId()) != null ? bookIdMap.get(policy.getId()).bookId : null)
 				.bookTitle(bookIdMap.get(policy.getId()) != null ? bookIdMap.get(policy.getId()).bookTitle : null)
-				.categoryId(categoryIdMap.get(policy.getId()) != null ? categoryIdMap.get(policy.getId()).categoryId : null)
-				.categoryName(categoryIdMap.get(policy.getId()) != null ? categoryIdMap.get(policy.getId()).categoryName : null)
+				.categoryId(
+					categoryIdMap.get(policy.getId()) != null ? categoryIdMap.get(policy.getId()).categoryId : null)
+				.categoryName(
+					categoryIdMap.get(policy.getId()) != null ? categoryIdMap.get(policy.getId()).categoryName : null)
 				.build()
-			).collect(Collectors.toList());
+			).toList();
 
 		// Count total number of coupon policies
 		long totalCount = Optional.ofNullable(queryFactory
@@ -62,6 +67,9 @@ public class CustomCouponPolicyRepositoryImpl implements CustomCouponPolicyRepos
 		return new PageImpl<>(couponPolicies, pageable, totalCount);
 	}
 
+	/**
+	 *{@inheritDoc}
+	 */
 	@Override
 	public Optional<CouponPolicy> findLatestCouponPolicyByType(String type) {
 		QCouponPolicy couponPolicy = QCouponPolicy.couponPolicy;
